--- a/react_tutorial.html
+++ b/react_tutorial.html
@@ -11,16 +11,59 @@
   <body>
     <div id="content"></div>
     <script type="text/jsx">
+     
+      //JSX style
      var CommentBox = React.createClass({
        render: function(){
          return (
            <div className="commentBox">
-              Hello, world! I am a CommentBox.
+             <h1>Comments</h1>
+             <CommentList />
+             <CommentForm />
            </div>
           );
         }
       });
+
+      var CommentList = React.createClass({
+        render: function() {
+          return  (
+            <div className="commentList">
+              Hello, world! I am a CommentList.
+            </div>
+          );
+        }
+      });
+
+      var CommentForm = React.createClass({
+        render: function() {
+          return (
+            <div className="commentForm">
+              Hello, world! I am a CommentForm.
+            </div>
+          );
+        }
+      });
+
+
       React.render(<CommentBox />, document.getElementById('content'));
+
+  
+    </script>
+
+    <script type="text/javascript">
+     
+     //raw javascript
+     //var CommentBox = React.createClass({displayName: 'CommentBox',
+     //  render: function(){
+     //   return (
+     //       React.createElement('div', {className: "commentBox"}, "Hello, world! I am a CommentBox."
+     //       )
+     //     );
+     //   }
+     //});
+     //React.render(React.createElement(CommentBox, null), document.getElementById('content'));
+
     </script>
   </body>
 </html>
