--- a/react_tutorial.html
+++ b/react_tutorial.html
@@ -13,6 +13,19 @@
     <script type="text/jsx">
      
       //JSX style
+     var Comment = React.createClass({
+       render: function() {
+        return (
+          <div clasName="Comment">
+            <h2 className="commentAuthor">
+              {this.props.author}
+            </h2>
+            {this.props.children}
+          </div>
+        );
+       }
+     });
+
      var CommentBox = React.createClass({
        render: function(){
          return (
@@ -29,7 +42,8 @@
         render: function() {
           return  (
             <div className="commentList">
-              Hello, world! I am a CommentList.
+              <Comment author="Pete Hunt"> This is one comment</Comment>
+              <Comment author="Jordan Walke"> This is *another* comment</Comment>
             </div>
           );
         }
@@ -44,6 +58,8 @@
           );
         }
       });
+
+
 
 
       React.render(<CommentBox />, document.getElementById('content'));
