--- a/react_tutorial.html
+++ b/react_tutorial.html
@@ -7,6 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
   </head>
   <body>
     <div id="content"></div>
@@ -15,12 +16,13 @@
       //JSX style
      var Comment = React.createClass({
        render: function() {
+        var rawMarkup = marked(this.props.children.toString(), {sanitize: true});
         return (
           <div clasName="Comment">
             <h2 className="commentAuthor">
               {this.props.author}
             </h2>
-            {this.props.children}
+            <span dangerouslySetInnerHTML={{__html: rawMarkup}}/>
           </div>
         );
        }
