--- a/react_tutorial.html
+++ b/react_tutorial.html
@@ -12,7 +12,10 @@
   <body>
     <div id="content"></div>
     <script type="text/jsx">
-     
+     var data = [
+        {author: "Pete Hunt", text: "This is one comment"},
+        {author: "Jordan Walke", text: "This is *another* comment"}
+      ];
       //JSX style
      var Comment = React.createClass({
        render: function() {
@@ -33,7 +36,7 @@
          return (
            <div className="commentBox">
              <h1>Comments</h1>
-             <CommentList />
+             <CommentList data={this.props.data}/>
              <CommentForm />
            </div>
           );
@@ -42,10 +45,16 @@
 
       var CommentList = React.createClass({
         render: function() {
+          var commentNodes = this.props.data.map(function (comment) {
+            return (
+              <Comment author={comment.author}>
+                {comment.text}
+              </Comment>
+            );
+          });
           return  (
             <div className="commentList">
-              <Comment author="Pete Hunt"> This is one comment</Comment>
-              <Comment author="Jordan Walke"> This is *another* comment</Comment>
+              {commentNodes}
             </div>
           );
         }
@@ -64,7 +73,7 @@
 
 
 
-      React.render(<CommentBox />, document.getElementById('content'));
+      React.render(<CommentBox data={data}/>, document.getElementById('content'));
 
   
     </script>
