--- a/react_tutorial.html
+++ b/react_tutorial.html
@@ -33,10 +33,13 @@
 
      var CommentBox = React.createClass({
        render: function(){
+         getInitialState: function(){
+           return {data: []};
+         },
          return (
            <div className="commentBox">
              <h1>Comments</h1>
-             <CommentList data={this.props.data}/>
+             <CommentList data={this.state.data}/>
              <CommentForm />
            </div>
           );
