--- a/public/react_tutorial.html
+++ b/public/react_tutorial.html
@@ -12,10 +12,10 @@
   <body>
     <div id="content"></div>
     <script type="text/jsx">
-     var data = [
-        {author: "Pete Hunt", text: "This is one comment"},
-        {author: "Jordan Walke", text: "This is *another* comment"}
-      ];
+     //var data = [
+     //   {author: "Pete Hunt", text: "This is one comment"},
+     //   {author: "Jordan Walke", text: "This is *another* comment"}
+     // ];
       //JSX style
      var Comment = React.createClass({
        render: function() {
@@ -32,10 +32,27 @@
      });
 
      var CommentBox = React.createClass({
+        loadCommentsFromServer: function(){
+          $.ajax({
+            url: this.props.url,
+            dataType: 'json',
+            cache: false,
+            success: function(data) {
+              this.setState({data: data});
+            }.bind(this),
+            error: function(xhr, status, err) {
+              console.error(this.props.url, status, err.toString());
+            }.bind(this)
+          });
+        },
+        getInitialState: function(){
+         return {data: []};
+        },
+        componentDidMount: function() {
+          this.loadCommentsFromServer();
+          setInterval(this.loadCommentsFromServer, this.props.polling);
+        },
        render: function(){
-         getInitialState: function(){
-           return {data: []};
-         },
          return (
            <div className="commentBox">
              <h1>Comments</h1>
@@ -72,28 +89,9 @@
           );
         }
       });
-
-
-
-
-      React.render(<CommentBox data={data}/>, document.getElementById('content'));
+      React.render(<CommentBox url="comments.json" pollInterval={2000}/>, document.getElementById('content'));
 
   
-    </script>
-
-    <script type="text/javascript">
-     
-     //raw javascript
-     //var CommentBox = React.createClass({displayName: 'CommentBox',
-     //  render: function(){
-     //   return (
-     //       React.createElement('div', {className: "commentBox"}, "Hello, world! I am a CommentBox."
-     //       )
-     //     );
-     //   }
-     //});
-     //React.render(React.createElement(CommentBox, null), document.getElementById('content'));
-
     </script>
   </body>
 </html>
