--- a/public/react_tutorial.html
+++ b/public/react_tutorial.html
@@ -12,10 +12,7 @@
   <body>
     <div id="content"></div>
     <script type="text/jsx">
-     //var data = [
-     //   {author: "Pete Hunt", text: "This is one comment"},
-     //   {author: "Jordan Walke", text: "This is *another* comment"}
-     // ];
+
       //JSX style
      var Comment = React.createClass({
        render: function() {
@@ -45,23 +42,59 @@
             }.bind(this)
           });
         },
+        handleSubmit: function(comment){
+          $.ajax({
+            url: this.props.url,
+            dataType: 'json',
+            type: 'POST',
+            data: comment,
+            success: function(data){
+              this.setState({data:data});
+            }.bind(this),
+            error: function(xhr,status,err){
+              console.error(this.props.url, status, err.toString());
+            }.bind(this)
+          });
+        },
         getInitialState: function(){
          return {data: []};
         },
         componentDidMount: function() {
           this.loadCommentsFromServer();
-          setInterval(this.loadCommentsFromServer, this.props.polling);
+          setInterval(this.loadCommentsFromServer, this.props.pollInterval);
         },
        render: function(){
          return (
            <div className="commentBox">
              <h1>Comments</h1>
              <CommentList data={this.state.data}/>
-             <CommentForm />
+             <CommentForm onCommentSubmit={this.handleCommentSubmit}/>
            </div>
           );
         }
       });
+
+     var CommentForm = React.createClass({
+        handleSubmit: function(e) {
+          e.preventDefault();
+          var author = react.findDOMNode(this.refs.author).value.trim();
+          var text = React.findDOMNode(this.refs.text).value.trim();
+          if(!text || !author)
+            return;
+          this.props.onCommentSubmit({author: author, text: text});
+          React.findDOMNode(this.refs.author).value = '';
+          React.findDOMNode(this.refs.text).value = '';
+        },
+        render: function() {
+          return (
+            <form className="commentForm" onSubmit={this.handleSubmit}>
+              <input type="text" placeholder="Your name" ref="author"/>
+              <input type="text" paceholder="Say something..." ref="text"/>
+              <input type="submit" value="Post"/>
+            </form>
+          );
+        }
+     });
 
       var CommentList = React.createClass({
         render: function() {
@@ -80,16 +113,8 @@
         }
       });
 
-      var CommentForm = React.createClass({
-        render: function() {
-          return (
-            <div className="commentForm">
-              Hello, world! I am a CommentForm.
-            </div>
-          );
-        }
-      });
-      React.render(<CommentBox url="comments.json" pollInterval={2000}/>, document.getElementById('content'));
+     
+      React.render(<CommentBox url="comments.json" pollInterval={5000}/>, document.getElementById('content'));
 
   
     </script>
