added optimistic commenting

--- a/public/react_tutorial.html
+++ b/public/react_tutorial.html
@@ -42,6 +42,23 @@
             }.bind(this)
           });
         },
+        handleCommentSubmit: function(comment){
+          var comments = this.state.data;
+          var newComments = comments.concat([comment]);
+          this.setState({data: newComments});
+          $.ajax({
+            url: this.props.url,
+            dataType: 'json',
+            type: 'POST',
+            data: comment,
+            success: function(data) {
+              this.setState({data: data});
+            }.bind(this),
+            error: function(xhr, status, err) {
+              console.error(this.props.url, status, err.toString());
+            }.bind(this)
+          });
+        },
         handleSubmit: function(comment){
           $.ajax({
             url: this.props.url,
@@ -77,7 +94,7 @@
      var CommentForm = React.createClass({
         handleSubmit: function(e) {
           e.preventDefault();
-          var author = react.findDOMNode(this.refs.author).value.trim();
+          var author = React.findDOMNode(this.refs.author).value.trim();
           var text = React.findDOMNode(this.refs.text).value.trim();
           if(!text || !author)
             return;
